# rustops-blueprint

./: .codespellrc  .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/cue/: ci_tool.cue  docs.cue  github-actions.cue  github-pages.cue  markdown.cue  preload-cache.cue  preload-caches.cue  rust.cue  scheduled.cue  shared-steps.cue  wordsmith.cue  workflows.cue
.github/cue.mod/pkg/json.schemastore.org/github/: github-workflow.cue
.github/cue/cue.mod/: module.cue
.github/workflows/: README.md  check.cue  check.yml  ci.yml  ci_tool.cue  deploy-github-pages.yml  docs.cue  docs.yml  flush-cache.yml  github-actions.cue  github-actions.yml  github-pages.cue  github-pages.yml  labeler.yml  markdown.yml  on-pull-request-target.yml  on-pull-request.yml  on-push-to-main.yml  on-schedule-weekly.yml  preload-cache.yml  preload-caches.yml  rust.cue  rust.yml  scheduled.yml  test.cue  test.yml  wordsmith.yml  workflows.cue
crates/mybin/: Cargo.toml  README.md
crates/mybin/src/: main.rs
crates/mylib/: Cargo.toml  README.md
crates/mylib/benches/: my_benchmark.rs
crates/mylib/src/: lib.rs
crates/mylib/tests/integration/: main.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  coverage.rs  cue.rs  dev.rs  dist.rs  fixup.rs  install.rs  main.rs  utils.rs
