[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
is_ci = "1.1.1"
lexopt = "0.3.0"
nanoserde = "0.1.35"
which = "5.0.0"
xshell = "0.2.5"
